# biological-evaluation

./: .gitignore  README.md  cluster-compose.yml  experiments.sh  mongoexport.sh  mongosrc.sh  pyproject.toml  reactome.sh  solver.md  worker.sh
docs/: docs.drawio  dump.typ
extra/: blackbox.py  job.py  lib.py  main.py  openbox.sql
report/: CHRS  Cypher.sublime-syntax  WORD  bibliography.bib  example.aux  example.out  example.tex  example.toc  main.aux  main.bbl-SAVE-ERROR  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  model.typ  packages.txt  reactome_citation_29186351.bib
report/images/: hemoglobin.typ  legend.typ  lib.typ  pdfize.sh  striated_muscle_contration.typ
services/: entrypoint.sh  slurm.conf
src/: ask_and_tell_optimizer.py  blackbox.py  experiment.py  experiment1.py  job.sh  lib.py  optimizer.py  optimizer_ask_and_tell.py  optimizer_generic.py  optimizer_parallel.py  optimizer_random.py  orchestrator.py  plot.py  process_job.sh  reactome_perf.py  worker.py
src/core/: ask_and_tell_optimizer.py  blackbox.py  experiment.py  generic_optimizer.py  lib.py  parallel_optimizer.py  plot.py
src/optimizers/: ask_and_tell_optimizer.py  generic_optimizer.py  plot.py
src/reactome-analysis/: experiment1.cypher  experiment2.cypher  experiment_c_amp_no.cypher  helper.cypher  reactome_analysis.cypher  test.cypher
src/test/: test.py
